--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==4.2.2
 psycopg2-binary==2.9.6
 crispy-bootstrap5==0.7
 django-debug-toolbar==4.1.0
+Scrapy==2.9.0
 
 selenium>=4.10.0
 Faker>=18.10.1
