--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ crispy-bootstrap5==0.7
 django-debug-toolbar==4.1.0
 Scrapy==2.9.0
 scrapy-playwright==0.0.26
-
+Pillow==10.0.0
 
 selenium>=4.10.0
 Faker>=18.10.1
