--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Pillow==10.0.0
 
 selenium>=4.11.2
 Faker>=18.10.1
+faker-enum>=0.0.2
 pytest-selenium>=4.0.1
 pytest-django>=4.5.2
 factory-boy>=3.3.0
